<resources>
    <string name="app_name">Dengue Sentinel Site Surveillance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="separator">/</string>
    <string name="title_activity_main">main</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="hint_name">Patient Name</string>
    <string name="add_patient_title">Add Patient</string>
    <string name="hint_year">Years</string>
    <string name="hint_months">Months</string>
    <string name="btn_submit">Submit</string>
    <string name="genderText">Gender</string>
    <string name="hint_adress">Address</string>
    <string name="age_text">Age</string>
    <string name="district_text">District</string>
    <string name="moh_text">MOH</string>
    <string name="phi_text">PHI</string>
    <string name="gndev_text">GN Dev</string>
    <string name="remarks_text">Remarks</string>
    <string name="hint_remarks">Remarks</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="typeF_array">
        <item>Dengue</item>
        <item>Other</item>
    </string-array>
    <string-array name="hospital_array">
        <item>All</item>
        <item>NHC</item>
    </string-array>
    <string-array name="occupation_array">
        <item>Student</item>
        <item>Student</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_view_patient_list">ViewPatientList</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="input_hint">Enter Here</string>
    <string name="input_prefill"></string>
    <string name="title_activity_maps">Map</string>
    <string name="input">Specific Year</string>
    <string name="input_content">Enter the year</string>
    <string name="title_activity_maps_new">Map</string>
    <string name="progress_dialog">Signing In…</string>
    <string name="please_wait">Please Wait</string>
    <string name="data">data</string>
    <string name="submit">Submit</string>
    <string name="take_photo_now">Open Camera</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="title_specific_month">Select specific month</string>
    <string name="patient_list">Patient List</string>
    <string name="welcome_to_dengue_sentinel_site_surveillance_mobile_application">Welcome to Dengue Sentinel Site Surveillance Mobile Application</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="dataLoadingTitle">Data Loading</string>
    <string name="waitingResponseTitle">Waiting for Response</string>
    <string name="account_management">Account Management</string>
    <string name="manage_your_user_account">Manage your user account</string>
    <string name="manage">Manage</string>
    <string name="add_new_patient">Add New Patient</string>

</resources>
